<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/response_title"
    android:layout_marginTop="@dimen/margin_vertical_8dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/response_lobby_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/auto_content_1"
            style="@style/AutoResponseTxt"
            android:text="@string/auto_response_content_1" />

        <TextView
            android:id="@+id/auto_content_2"
            style="@style/AutoResponseTxt"
            android:text="@string/auto_response_content_2" />

        <TextView
            android:id="@+id/auto_content_3"
            style="@style/AutoResponseTxt"
            android:text="@string/auto_response_content_3" />
    </LinearLayout>


</RelativeLayout>