<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auto_response_background_color"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:id="@+id/response_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool_bar_layout"
        android:layout_marginVertical="@dimen/margin_vertical_32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Common_MainText"
            android:textColor="@color/auto_response_icon_text_color"
            android:text="@string/auto_response_icon_text" />

    </LinearLayout>

    <include
        layout="@layout/response_content" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_vertical_32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/auto_decision"
            style="@style/NicknameBtn"
            android:layout_marginHorizontal="@dimen/margin_horizontal_24dp"
            android:text="@string/auto_response_btn_set" />

        <Button
            android:id="@+id/auto_release"
            style="@style/NicknameBtn"
            android:layout_marginHorizontal="@dimen/margin_horizontal_24dp"
            android:text="@string/auto_response_btn_release" />

    </LinearLayout>

</RelativeLayout>