<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/common_background">

    <include
        android:id="@+id/toool_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toool_bar_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_vertical_64dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_horizontal_32dp"
                style="@style/Common_MainText"
                android:text="@string/activity_login_user_id" />

            <EditText
                android:id="@+id/user_id"
                style="@style/LoginEdittext"
                android:inputType="text"
                android:imeOptions="actionNext"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical_16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical_16dp"
                android:layout_marginLeft="@dimen/margin_horizontal_32dp"
                style="@style/Common_MainText"
                android:text="@string/activity_login_user_password" />

            <EditText
                android:id="@+id/password"
                style="@style/LoginEdittext"
                android:inputType="numberPassword"
                android:imeOptions="actionGo"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_vertical_64dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/login"
            style="@style/LoginBtn"
            android:enabled="false"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="@string/activity_login_btn_login"/>

        <TextView
            android:id="@+id/login_forgot_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Common_MainText"
            android:textColor="@color/login_blue"
            android:text="@string/activity_login_link_forget" />

    </LinearLayout>

</RelativeLayout>