<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_marginVertical="@dimen/margin_horizontal_12dp"
        android:layout_marginLeft="@dimen/margin_horizontal_16dp"
        android:textSize="@dimen/text_size_x_medium"
        android:text="@string/ringtone_dialog_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_footer_view_height_size"
        android:background="@color/common_30_grey"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ringtone_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </android.support.v7.widget.RecyclerView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_footer_view_height_size"
        android:background="@color/common_30_grey"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ringtone_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_cancel"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/margin_horizontal_16dp"
            android:layout_marginVertical="@dimen/margin_vertical_8dp"
            android:textColor="@color/common_white"
            android:text="@string/ringtone_dialog_btn_ok" />

        <Button
            android:id="@+id/ringtone_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_cancel"
            android:layout_marginHorizontal="@dimen/margin_horizontal_16dp"
            android:layout_marginVertical="@dimen/margin_vertical_8dp"
            android:textColor="@color/common_white"
            android:text="@string/ringtone_dialog_btn_cancel" />

    </LinearLayout>

</LinearLayout>